--- a/app/view/index.html
+++ b/app/view/index.html
@@ -1,22 +1,281 @@
 <!DOCTYPE html>
-<html ng-app='app' ng-cloak>
+<html ng-app='app' ng-cloak lang="en">
 	<head>
-		<base href="/">
-		<title>Page Title</title>
+		<meta charset="utf-8">
+    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    	<link rel="stylesheet" href="src/css/index.css">
+    	<link rel="stylesheet" href="src/font/web-fonts-with-css/css/fontawesome-all.min.css">
+		<title>COTI</title>
+		
+
 	</head>
 	<body ng-controller="appCtrl">
+	
+		<header>
+			<nav class="navbar navbar-expand-lg navbar-fixed-top navbar-light bg-light">
+				<a class="navbar-brand" href="#">Navbar</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 
-		<h1>This is a Heading</h1>
-		<p>This is a paragraph.</p>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="#">TEAM <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">TOKEN</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Overview Document</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Technical Whitepaper</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">FAQ</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">COMMUNITY UPDATE</a>
+						</li>
 
-		 <div ng-view=""></div>
+					</ul>
+
+					<div class="">
+						<a href="" target="_blank"><i class=""></i></a>
+						<a href="" target="_blank"><i class=""></i></a>
+						<a href="" target="_blank"><i class=""></i></a>
+						<a href="" target="_blank"><i class=""></i></a>
+						<a href="" target="_blank"><i class=""></i></a>	
+					</div>
+				</div>
+			</nav>
+		</header>
+
+		<main>
+			<section class="section_one">
+				<div class="content">
+					<div class="img_background">
+						
+					</div>
+				</div>
+			</section>
+
+			<section class="">hola 2</section>
+			<section class="">hola 3</section>
+			<section class="">hola 4</section>
+			<section class="">hola 5</section>
+			<section class="">hola 6</section>
+			<section class="">hola 7</section>
+			<section class="">hola 8</section>
+			<section class="">hola 9</section>
+			<section class="">hola 10</section>
+			<section class="">hola 11</section>
+		</main>
+
+		<footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-12 col-sm-8 connect-copy-container">
+						
+						<h3 class="txt-highlight">connect</h3>
+						<br>
+						<h2>
+							COTI is the Currency of the Internet – the fastest, easiest, most cost-effective and reliable way to pay
+						</h2>
+						<br>
+						<form class="form-inline">
+							<div class="form-group mb-2">
+								<label for="staticEmail2" class="sr-only">Email</label>
+							</div>
+							<div class="form-group mx-sm-3 mb-2">
+								<div class="input-group mb-3">
+									<div class="input-group-prepend">
+										<span class="input-group-text" id="basic-addon1">@</span>
+									</div>
+									<label for="email" class="sr-only">Email</label>
+									<input type="email" class="form-control" placeholder="YOUR EMAIL">
+								</div>
+								
+							</div>
+							<button type="submit" class="btn btn-primary mb-2">Confirm identity</button>
+						</form>
+					</div>
+
+					<div class="d-none d-md-block col-sm-4 social-network">
+						<div class="row">
+							<div class="col-md-4">
+								<a href="">
+									<i class="fab fa-reddit-alien"></i>
+									<p>
+										Reddit
+									</p>
+								</a>
+							</div>
+
+							<div class="col-md-4">
+								<a href="">
+									<i class="fab fa-facebook-square"></i>
+									<p>
+										Facebook
+									</p>
+								</a>
+							</div>	
+						</div>
+
+						<div class="row">
+							<div class="col-md-4">
+								<a href="">
+									<i class="fab fa-twitter"></i>
+									<p>
+										Twitter
+									</p>
+								</a>
+							</div>
+
+							<div class="col-md-4">
+								<a href="">
+									<i class="fab fa-medium-m"></i>
+									<p>
+										Medium
+									</p>
+								</a>
+							</div>	
+						</div>
+
+						<div class="row">
+							<div class="col-md-4">
+								<a href="">
+									<i class="fab fa-telegram-plane"></i>
+									<p>
+										Telegram
+									</p>
+								</a>
+							</div>
+
+							<div class="col-md-4">
+								<a href=""><i class="steemit"></i><p>Steemit</p></a>
+							</div>	
+						</div>
+
+						<div class="row">
+							<div class="col-md-4">
+								<a href="">
+									<i class="fab fa-linkedin-in"></i>
+									<p>
+										Linkedin
+									</p>
+								</a>
+							</div>
+
+							<div class="col-md-4">
+								<a href="">
+									<i class="fab fa-youtube"></i>
+									<p>
+										Youtube
+									</p>
+								</a>
+							</div>	
+						</div>
+					</div>
+					<div class="col-12">
+						<a href="">contact@coti.io</a>
+						<a href="">Website Terms</a>
+						<a href="">Privacy</a>
+						<a href="">AML</a>
+						<a href="">Refund</a>
+					</div>
+					<br>
+					<p>© 2018 COTI Limited</p>
+				</div>
+				<div class="d-md-none col-sm-4">
+						<div class="row">
+							<div class="col-3">
+								<a href="">
+									<p>
+										<i class="fab fa-reddit-alien"></i>
+										Reddit
+									</p>
+								</a>
+							</div>
+
+							<div class="col-3">
+								<a href="">
+									<p>
+										<i class="fab fa-facebook-square"></i>Facebook
+									</p>
+								</a>
+							</div>	
+						
+							<div class="col-3">
+								<a href="">
+									<p>
+										<i class="fab fa-twitter"></i>
+										Twitter
+									</p>
+								</a>
+							</div>
+
+							<div class="col-3">
+								<a href="">
+									<p>
+										<i class="fab fa-twitter"></i>
+										Twitter
+									</p>
+								</a>
+							</div>	
+						</div>
+
+						<div class="row">
+							<div class="col-3">
+								<a href="">
+									<p>
+										<i class="fab fa-medium-m"></i>
+										Medium
+									</p>
+								</a>
+							</div>
+
+							<div class="col-3">
+								<a href="">
+									<p>
+										<i class="fab fa-telegram-plane"></i>
+										Telegram
+									</p>
+								</a>
+							</div>	
+					
+							<div class="col-3">
+								<a href="">
+									<p>
+										<i class="fab fa-linkedin-in"></i>
+										Linkedin
+									</p>
+								</a>
+							</div>
+
+							<div class="col-3">
+								<a href="">
+									<p>
+										<i class="fab fa-youtube"></i>
+										Youtube
+									</p>
+								</a>
+							</div>	
+						</div>
+				</div>
+			</div>
+		</footer>
+
 
 		<script src="node_modules/jquery/dist/jquery.min.js"></script>
+		
+		<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
 		<script src="node_modules/angular/angular.min.js"></script>
-		<script src="node_modules/angular-route/angular-route.min.js"></script>
 	
 		<script src="src/js/modules/module.js"></script>
 		<script src="src/js/controllers/appCtrl.js"></script>
-		<script src="src/js/routes/routes.js"></script>
 	</body>
 </html>
