--- a/app/view/index.html
+++ b/app/view/index.html
@@ -6,7 +6,7 @@
     	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     	<link rel="stylesheet" href="src/css/index.css">
     	<link rel="stylesheet" href="src/font/web-fonts-with-css/css/fontawesome-all.min.css">
-		<title>COTI</title>
+		<title>YOT</title>
 		
 
 	</head>
@@ -14,7 +14,7 @@
 	
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-fixed-top navbar-light bg-light">
-				<a class="navbar-brand" href="#">Navbar</a>
+				<a class="navbar-brand" href="#">YOT</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -62,10 +62,72 @@
 				</div>
 			</section>
 
-			<section class="">hola 2</section>
-			<section class="">hola 3</section>
-			<section class="">hola 4</section>
-			<section class="">hola 5</section>
+			<section class="section_two">
+				<div class="row">
+					<div class="col-xl-6 col-12">
+						<div class="vision"></div>
+					</div>
+					<div class="col-xl-6 col-12">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</div>
+				</div>
+			</section>
+
+			<section class="section_three">
+				<div class="row">
+					<div class="container">
+						<div class="col-xl-6 col-12">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</div>
+						<div class="col-xl-6 col-12">
+							<div class="challenge-img"></div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="section_fourth">
+				<div class="row">
+					<div class="col-xl-6 col-12">
+						<div class="solution-img"></div>
+					</div>
+					<div class="col-xl-6 col-12">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</div>
+				</div>
+			</section>
+			<section class="section_five">
+				<div class="row">
+					<div class="container">
+						<div class="col-xl-6 col-12">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</div>
+						<div class="col-xl-6 col-12">
+							<div class="protocol-img"></div>
+						</div>
+					</div>
+				</div>
+			</section>
 			<section class="">hola 6</section>
 			<section class="">hola 7</section>
 			<section class="">hola 8</section>
