--- a/app/view/index.html
+++ b/app/view/index.html
@@ -11,7 +11,6 @@
 
 	</head>
 	<body ng-controller="appCtrl">
-	
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-fixed-top navbar-light bg-light">
 				<a class="navbar-brand" href="#">YOT</a>
@@ -128,8 +127,34 @@
 					</div>
 				</div>
 			</section>
-			<section class="">hola 6</section>
-			<section class="">hola 7</section>
+			<section class="section_six">
+				<div class="row">
+					<div class="col-4 col-xl-2">
+						<a href="" target="_blank"><div class="investing"></div></a>
+					</div>
+					<div class="col-4 col-xl-2">
+						<a href="" target="_blank"><div class="techcrunch"></div></a>
+					</div>
+					<div class="col-4 col-xl-2">	
+						<a href="" target="_blank"><div class="forbes"></div></a>
+					</div>
+
+					<div class="col-4 col-xl-2">
+						<a href="" target="_blank"><div class="inc"></div></a>
+					</div>
+					<div class="col-4 col-xl-2">
+						<a href="" target="_blank"><div class="euromoney"></div></a>
+					</div>
+					<div class="col-4 col-xl-2">
+						<a href="" target="_blank"><div class="telegraph"></div></a>
+					</div>
+				</div>
+			</section>
+			<section class="section_seven">
+				<div class="documentation-left">
+					<div class="documentation-box-container"></div>
+				</div>
+			</section>
 			<section class="">hola 8</section>
 			<section class="">hola 9</section>
 			<section class="">hola 10</section>
