avance matutino seccion 11

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -43,10 +43,11 @@
 
 					<div class="">
 						<a href="" target="_blank"><i class=""></i></a>
-						<a href="" target="_blank"><i class=""></i></a>
-						<a href="" target="_blank"><i class=""></i></a>
-						<a href="" target="_blank"><i class=""></i></a>
-						<a href="" target="_blank"><i class=""></i></a>	
+						<a href="" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+						<a href="" target="_blank"><i class="fab fa-medium-m"></i></a>
+						<a href="" target="_blank"><i class="fab fa-twitter"></i></a>
+						<a href="" target="_blank"><i class="fab fa-facebook-square"></i></a>	
+						<a href="" target="_blank"><i class="fab fa-reddit-alien"></i></a>
 					</div>
 				</div>
 			</nav>
@@ -127,7 +128,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="section_six">
+			<section class="pattern">
 				<div class="row">
 					<div class="col-4 col-xl-2">
 						<a href="" target="_blank"><div class="investing"></div></a>
@@ -158,7 +159,17 @@
 			<section class="">hola 8</section>
 			<section class="">hola 9</section>
 			<section class="">hola 10</section>
-			<section class="">hola 11</section>
+			<section class="pattern">
+				<div class="row align-partners">
+					<div class="col-12 offset-lg-2 offset-xl-2 col-lg-4 col-xl-4">
+						<div class="transacteu"></div>
+					</div>
+
+					<div class="col-12 col-lg-4 col-xl-4">
+						<div class="processing"></div>
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<footer>
