--- a/app/src/css/index.css
+++ b/app/src/css/index.css
@@ -194,10 +194,10 @@ footer{
     margin-left: 45vw;
 }
 
-.section_six {
+.pattern {
 	height: auto;
 	display: block;
-    padding: 75px 0;
+    padding: 85px 0;
     padding-left: 15%;
     padding-right: 15%;
     height: auto;
@@ -285,4 +285,26 @@ footer{
 .telegraph:hover {
    	background: url(../img/telegraph.png) no-repeat;
     background-size: contain;
+}
+
+.transacteu {
+    background: url(../img/transacteu.png) no-repeat;
+    height: 40px;
+    width: 201px;
+    margin-top: -2vh;
+}
+
+.processing {
+    background: url(../img/processing.png) no-repeat;
+    height: 23px;
+    width: 240px;
+    padding-top: 8px;
+    margin-top: -2vh;
+}
+
+
+
+.align-partners {
+    margin-bottom: 4.3%;
+    margin-top: 3%;
 }
