se adelantaron 2 secciones falta una y empezar el responsive

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -157,10 +157,68 @@
 				</div>
 			</section>
 			<section class="">hola 8</section>
-			<section class="">hola 9</section>
-			<section class="">hola 10</section>
+			<section class="section_eight">
+					<div class="roadmap-img-container">
+						<div class="map-img map-img1"></div>
+						<div class="map-img map-img2"></div>
+						<div class="map-img map-img3"></div>
+					</div>
+			</section>
+			<section>
+				<div class="container">
+					<div class="row">
+						<div class="col-md-4 col-xl-4">
+							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/1.jpg" width="140" height="140">
+							<p class="team-people-name">Carlos Aguilera</p>
+							<p class="team-people-title">CEO</p>
+						</div>
+						<div class="col-md-4 col-xl-4">
+							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/2.jpg" width="140" height="140">
+							<p class="team-people-name">Gregory Perez</p>
+							<p class="team-people-title">Product Manager</p>
+						</div>
+						<div class="col-md-4 col-xl-4">
+							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/3.jpg" width="140" height="140">
+							<p class="team-people-name">Cesar Kai</p>
+							<p class="team-people-title">SEO</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="container">
+					<div id="" class="row">
+						<div class="col-md-4 col-xl-4">
+							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/1.jpg" width="140" height="140">
+						</div>
+						<div class="col-md-4 col-xl-4">
+							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/2.jpg" width="140" height="140">
+						</div>
+						<div class="col-md-4 col-xl-4">
+							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/3.jpg" width="140" height="140">
+						</div>
+					</div>
+				</div>
+
+				<div id="" class="container">
+					<div class="row">
+						<div class="col-md-4 col-xl-4">
+							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/1.jpg" width="140" height="140">
+						</div>
+						<div class="col-md-4 col-xl-4">
+							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/2.jpg" width="140" height="140">
+						</div>
+						<div class="col-md-4 col-xl-4">
+							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/3.jpg" width="140" height="140">
+						</div>
+					</div>
+				</div>
+			</section>
+			
 			<section class="pattern">
-				<div class="row align-partners">
+						
+				<h3 class="txt-highlight _center">PARTNERS</h3>
+					
+				<div class="row align-partners">		
 					<div class="col-12 offset-lg-2 offset-xl-2 col-lg-4 col-xl-4">
 						<div class="transacteu"></div>
 					</div>
@@ -180,7 +238,7 @@
 						<h3 class="txt-highlight">connect</h3>
 						<br>
 						<h2>
-							COTI is the Currency of the Internet – the fastest, easiest, most cost-effective and reliable way to pay
+							YOA is the Currency of the Internet – the fastest, easiest, most cost-effective and reliable way to pay
 						</h2>
 						<br>
 						<form class="form-inline">
@@ -278,14 +336,14 @@
 						</div>
 					</div>
 					<div class="col-12">
-						<a href="">contact@coti.io</a>
+						<a href="">contact@yoa.io</a>
 						<a href="">Website Terms</a>
 						<a href="">Privacy</a>
 						<a href="">AML</a>
 						<a href="">Refund</a>
 					</div>
 					<br>
-					<p>© 2018 COTI Limited</p>
+					<p>© 2018 YOA Limited</p>
 				</div>
 				<div class="d-md-none col-sm-4">
 						<div class="row">
