--- a/app/src/css/index.css
+++ b/app/src/css/index.css
@@ -44,6 +44,11 @@
     background-image: linear-gradient(252deg,#2cbfdf,#2c9cdf);
 }
 
+._center {
+    text-align: unset;
+    margin: -2% 0% 1% -6%;
+}
+
 p {
 	text-indent: 3vw;
 }
@@ -307,4 +312,70 @@ footer{
 .align-partners {
     margin-bottom: 4.3%;
     margin-top: 3%;
+}
+
+.section_eight {
+    padding-top: 75px;
+    background-color: #f4f4f4;
+    background-image: linear-gradient(115deg,#123680,#0681a9);
+    height: auto;
+}
+
+.roadmap-img-container{
+    width: 250%;
+    -webkit-transition: margin-left 1.2s;
+    display: -webkit-inline-box;
+}
+
+
+.map-img {
+    position: relative;
+    float: left;
+    height: 500px;
+    max-width: 1300px;
+}
+
+.map-img1 {
+    background: url(../img/2017.svg) 0 0 no-repeat;
+    background-size: contain;
+    width: 40% !important;
+}
+
+.map-img2 {
+    background: url(../img/2018.svg) 0 0 no-repeat;
+    background-size: contain;
+    width: 40% !important;
+}
+
+.map-img3 {
+    background: url(../img/future.svg) 0 0 no-repeat;
+    background-size: contain;
+    width: 20% !important;
+}
+
+.team-people-name {
+    font-family: med;
+    margin: 0% 22% 0 22%;
+}
+
+.team-people-title {
+    font-weight: 300;
+    margin-top: -4%;     
+}
+
+.team-people-inner-container{
+    width: 33.33%;
+}
+
+.font-name {
+    text-indent: 0vw;
+    padding: 10px;
+    text-align: center;
+}
+
+.container > .row p {
+    font-size: 14px;
+    text-indent: 0vw;
+    padding: 10px;
+    text-align: center;
 }
