--- a/app/view/index.html
+++ b/app/view/index.html
@@ -158,10 +158,12 @@
 			</section>
 			<section class="">hola 8</section>
 			<section class="section_eight">
-					<div class="roadmap-img-container">
-						<div class="map-img map-img1"></div>
-						<div class="map-img map-img2"></div>
-						<div class="map-img map-img3"></div>
+					<div class="content-img">
+						<div class="roadmap-img-container" style="margin-left: 0%;">
+							<div class="map-img map-img1"></div>
+							<div class="map-img map-img2"></div>
+							<div class="map-img map-img3"></div>
+						</div>						
 					</div>
 			</section>
 			<section>
