ultima section hecha

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -111,6 +111,7 @@
 					</div>
 				</div>
 			</section>
+
 			<section class="section_five">
 				<div class="row">
 					<div class="container">
@@ -128,6 +129,7 @@
 					</div>
 				</div>
 			</section>
+
 			<section class="pattern">
 				<div class="row">
 					<div class="col-4 col-xl-2">
@@ -151,12 +153,65 @@
 					</div>
 				</div>
 			</section>
+
 			<section class="section_seven">
 				<div class="documentation-left">
 					<div class="documentation-box-container"></div>
 				</div>
 			</section>
-			<section class="">hola 8</section>
+
+			<section class="section_nine">
+				<div class="container">
+					<div class="row">
+						<div class="col-xl-6">
+							<div class="documentation-box-container">
+								<div class="documentation-box documentation-overview">
+									<div class="shadow">
+										<div class="documentation-box-top">
+											<div class="documentation-logo"></div>
+										</div>
+										<div class="documentation-box-middle">Overview Document</div>
+									</div>
+
+									<div class="documentation-box-bottom">
+										<a href="" target="_blank">
+											<button>Download</button>
+										</a>
+									</div>
+								</div>
+
+								<div class="documentation-box documentation-whitepaper">
+									<div class="shadow">
+										<div class="documentation-box-top">
+											<div class="documentation-logo"></div>
+										</div>
+										<div class="documentation-box-middle">Technical Whitepaper</div>
+									</div>
+
+									<div class="documentation-box-bottom">
+										<a href="" target="_blank">
+											<button>Download</button>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+							
+						<div class="col-xl-6">						
+							<div class="documentation-right">
+								<h3 class="txt-highlight">Documentation</h3>
+								<h2>Key documents</h2>
+								<p>The Overview Document provides an end-to-end picture of the COTI project – from its origins and motivation through to its token sale and roadmap.</p>
+								<br>
+								<p>The Technical Whitepaper provides a technical treatment of COTI’s core technology.</p>
+							</div>					
+						
+						</div>
+
+					</div>
+				</div>
+			</section>
+
 			<section class="section_eight">
 					<div class="content-img">
 						<div class="roadmap-img-container" style="margin-left: 0%;">
@@ -166,6 +221,7 @@
 						</div>						
 					</div>
 			</section>
+
 			<section>
 				<div class="container">
 					<div class="row">
@@ -347,81 +403,82 @@
 					<br>
 					<p>© 2018 YOA Limited</p>
 				</div>
+
 				<div class="d-md-none col-sm-4">
-						<div class="row">
-							<div class="col-3">
-								<a href="">
-									<p>
-										<i class="fab fa-reddit-alien"></i>
-										Reddit
-									</p>
-								</a>
-							</div>
-
-							<div class="col-3">
-								<a href="">
-									<p>
-										<i class="fab fa-facebook-square"></i>Facebook
-									</p>
-								</a>
-							</div>	
-						
-							<div class="col-3">
-								<a href="">
-									<p>
-										<i class="fab fa-twitter"></i>
-										Twitter
-									</p>
-								</a>
-							</div>
-
-							<div class="col-3">
-								<a href="">
-									<p>
-										<i class="fab fa-twitter"></i>
-										Twitter
-									</p>
-								</a>
-							</div>	
+					<div class="row">
+						<div class="col-3">
+							<a href="">
+								<p>
+									<i class="fab fa-reddit-alien"></i>
+									Reddit
+								</p>
+							</a>
 						</div>
 
-						<div class="row">
-							<div class="col-3">
-								<a href="">
-									<p>
-										<i class="fab fa-medium-m"></i>
-										Medium
-									</p>
-								</a>
-							</div>
-
-							<div class="col-3">
-								<a href="">
-									<p>
-										<i class="fab fa-telegram-plane"></i>
-										Telegram
-									</p>
-								</a>
-							</div>	
+						<div class="col-3">
+							<a href="">
+								<p>
+									<i class="fab fa-facebook-square"></i>Facebook
+								</p>
+							</a>
+						</div>	
 					
-							<div class="col-3">
-								<a href="">
-									<p>
-										<i class="fab fa-linkedin-in"></i>
-										Linkedin
-									</p>
-								</a>
-							</div>
-
-							<div class="col-3">
-								<a href="">
-									<p>
-										<i class="fab fa-youtube"></i>
-										Youtube
-									</p>
-								</a>
-							</div>	
+						<div class="col-3">
+							<a href="">
+								<p>
+									<i class="fab fa-twitter"></i>
+									Twitter
+								</p>
+							</a>
 						</div>
+
+						<div class="col-3">
+							<a href="">
+								<p>
+									<i class="fab fa-twitter"></i>
+									Twitter
+								</p>
+							</a>
+						</div>	
+					</div>
+
+					<div class="row">
+						<div class="col-3">
+							<a href="">
+								<p>
+									<i class="fab fa-medium-m"></i>
+									Medium
+								</p>
+							</a>
+						</div>
+
+						<div class="col-3">
+							<a href="">
+								<p>
+									<i class="fab fa-telegram-plane"></i>
+									Telegram
+								</p>
+							</a>
+						</div>	
+				
+						<div class="col-3">
+							<a href="">
+								<p>
+									<i class="fab fa-linkedin-in"></i>
+									Linkedin
+								</p>
+							</a>
+						</div>
+
+						<div class="col-3">
+							<a href="">
+								<p>
+									<i class="fab fa-youtube"></i>
+									Youtube
+								</p>
+							</a>
+						</div>	
+					</div>
 				</div>
 			</div>
 		</footer>
