--- a/app/src/css/index.css
+++ b/app/src/css/index.css
@@ -391,3 +391,179 @@ footer{
     padding: 10px;
     text-align: center;
 }
+
+.section_nine{
+    position: static;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    height: 80vh;
+    width: 100%;
+    overflow: hidden;
+    z-index: 100;
+}
+
+section#section_nine .documentation-left {
+    width: 572px;
+    height: 410px;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    flex-direction: column;
+}
+
+.documentation-right{
+	width: 80%;
+    margin: auto;
+    margin-top: 11vh;
+}
+
+.documentation-right h2 {
+	margin-bottom: 3%;
+}
+
+.documentation-right h3 {
+	font-family: 'Titillium Web',sans-serif;
+    text-transform: uppercase;
+    font-size: 14px;
+    letter-spacing: 1.8px;
+    margin-bottom: 1%;
+}
+
+.documentation-right p {
+	padding: 0px !important;
+	text-align: left !important;
+
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 1.5;
+    letter-spacing: .2px;
+    opacity: .95;
+    color: #3d3a44;
+}
+
+
+.documentation-box-container {
+    width: 572px;
+    height: 14pc;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    flex-direction: column;
+}
+
+.documentation-box {
+    width: 256px;
+    height: 410px;
+}
+
+.shadow {
+    box-shadow: 0 6px 16px 0 rgba(0,0,0,.2);
+}
+
+.documentation-box-top {
+	height: 256px;
+    box-sizing: border-box;
+    background-image: linear-gradient(227deg,#04a7cb,#892d98);
+    padding: 87px 0 0 88px
+}
+
+.documentation-logo {
+    background: url(../img/overview.svg) no-repeat;
+    background-size: contain;
+    width: 81px;
+    height: 89px;
+}
+
+.documentation-box-middle {
+    height: 52px;
+    line-height: 52px;
+    background-color: #eaedf4;
+    text-align: center;
+    font-family: 'Titillium Web',sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    letter-spacing: -.4px;
+}
+
+.documentation-whitepaper {
+
+}
+
+.documentation-whitepaper .documentation-box-top {
+	background-image: linear-gradient(222deg,#57d9f2,#194aad);
+    padding: 80px 0 0 64px;
+}
+
+.documentation-whitepaper .documentation-box-top{
+	background-image: linear-gradient(222deg,#57d9f2,#194aad);
+    padding: 80px 0 0 64px;
+}
+
+.documentation-whitepaper .documentation-logo {
+    background: url(../img/white-paper.svg) no-repeat;
+    background-size: contain;
+    width: 131px;
+    height: 101px;
+}
+
+.documentation-box-bottom {
+    height: 102px;
+    display: flex;
+    padding: 13%;
+}
+
+.section_nine button {
+	border: none;
+    width: 174px;
+    height: 36px;
+    border-radius: 16px;
+    box-shadow: 0 4px 10px 0 rgba(43,96,143,.3);
+    font-family: 'Titillium Web',sans-serif;
+    font-size: 12px;
+    letter-spacing: 1.5px;
+    text-align: left;
+    color: #f2fcff;
+    text-transform: uppercase;
+    padding-left: 30px;
+    margin: auto;
+    cursor: pointer;
+    transition: .3s all ease-in;
+    background: url(../img/download.svg) no-repeat 124px 8px;
+}
+
+.documentation-overview {}
+
+.documentation-overview button {
+    background-color: #2cbedf;
+}
+
+.documentation-whitepaper button {
+    background-color: #2c9cdf;
+}
+
+#section_nine .content{
+	max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 5%;
+    width: 90%;
+    height: 100vh;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+}
