se añadio la funcionalidad de bajar los  pdfs

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -27,16 +27,16 @@
 							<a class="nav-link" href="#">TOKEN</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Overview Document</a>
+							<a class="nav-link" href="src/pdfs/COTI-overview-document.pdf" target="_blank">Overview Document</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Technical Whitepaper</a>
+							<a class="nav-link" href="src/pdfs/COTI-technical-whitepaper.pdf" target="_blank">Technical Whitepaper</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">FAQ</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">COMMUNITY UPDATE</a>
+							<a class="nav-link" href="src/pdfs/COTI - Community Update.pdf" target="_blank">COMMUNITY UPDATE</a>
 						</li>
 
 					</ul>
@@ -174,7 +174,7 @@
 									</div>
 
 									<div class="documentation-box-bottom">
-										<a href="" target="_blank">
+										<a href="src/pdfs/COTI-overview-document.pdf" target="_blank">
 											<button>Download</button>
 										</a>
 									</div>
@@ -189,7 +189,7 @@
 									</div>
 
 									<div class="documentation-box-bottom">
-										<a href="" target="_blank">
+										<a href="src/pdfs/COTI-technical-whitepaper.pdf" target="_blank">
 											<button>Download</button>
 										</a>
 									</div>
@@ -204,10 +204,8 @@
 								<p>The Overview Document provides an end-to-end picture of the COTI project – from its origins and motivation through to its token sale and roadmap.</p>
 								<br>
 								<p>The Technical Whitepaper provides a technical treatment of COTI’s core technology.</p>
-							</div>					
-						
+							</div>						
 						</div>
-
 					</div>
 				</div>
 			</section>
