--- a/app/view/index.html
+++ b/app/view/index.html
@@ -12,10 +12,9 @@
 	</head>
 	<body ng-controller="appCtrl">
 		<header>
-			<nav class="navbar navbar-expand-lg navbar-fixed-top navbar-light bg-light">
+			<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
 				<a class="navbar-brand" href="#">YOT</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"></span>
 				</button>
 
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -41,8 +40,8 @@
 
 					</ul>
 
-					<div class="">
-						<a href="" target="_blank"><i class=""></i></a>
+					<div class="icon">
+						<a href="" target="_blank"><i class="steemit"></i></a>
 						<a href="" target="_blank"><i class="fab fa-telegram-plane"></i></a>
 						<a href="" target="_blank"><i class="fab fa-medium-m"></i></a>
 						<a href="" target="_blank"><i class="fab fa-twitter"></i></a>
@@ -490,5 +489,6 @@
 	
 		<script src="src/js/modules/module.js"></script>
 		<script src="src/js/controllers/appCtrl.js"></script>
+
 	</body>
 </html>
