--- a/app/view/index.html
+++ b/app/view/index.html
@@ -13,7 +13,7 @@
 	<body ng-controller="appCtrl">
 		<header>
 			<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-				<a class="navbar-brand" href="#">YOT</a>
+				<a class="navbar-brand" href="#"><img src="src/img/logo/logo.svg" alt="">YOT</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"></span>
 				</button>
 
