acomodando secciones aun si responsive

--- a/app/src/css/index.css
+++ b/app/src/css/index.css
@@ -165,8 +165,28 @@ footer{
 .section_three {
     background-image: linear-gradient(65deg,#194aad,#014a78);
     background-size: cover;
+    height: 100vh;
 }
 
+.section_three h3{
+	margin-top: 28vh;
+    margin-bottom: 1vh;
+}
+
+.section_three h2{
+	color: #e2efff;
+	width: 80%;
+}
+
+.section_three p{
+	font-size: 14px;
+    font-weight: 100;
+    line-height: 1.5;
+    letter-spacing: .2px;
+    opacity: .95;
+    color: #e2efff;
+    text-indent: 0px;
+}
 
 .challenge-img {
     background: url(../img/challenge.svg) center center no-repeat;
@@ -174,6 +194,7 @@ footer{
     width: 400px;
     height: 500px;
     margin-left: 45vw;
+    margin-top: -44vh;
 }
 
 .row {
@@ -181,10 +202,48 @@ footer{
     margin-left: 0px !important; 
 }
 
+.section_fourth {
+	height: 100vh;
+}
+
+.section_fourth h2{
+	font-size: 34px;
+    font-weight: 100;
+    letter-spacing: 1.1px;
+    width: 80%;
+}
+
+.section_fourth h3{
+	margin-top: 23vh;
+    margin-bottom: 1vh;
+}
+
+.section_fourth p {
+	width: 74%;
+    text-indent: 0px;
+
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 1.5;
+    letter-spacing: .2px;
+    opacity: .95;
+}
+
+.section_fourth .center-vertical {
+	margin-left: 3vw;
+}
+
+.section_fourth .center-horizontal {
+	display: inherit;
+    margin-top: 11vh;
+}
+
 .solution-img {
     background: url(../img/solution.svg) center center no-repeat;
     background-size: contain;
-    height: 500px;
+    height: 438px;
+    margin-top: 17vh;
+    margin-left: 9%;
 }
 
 .section_five {
@@ -638,3 +697,32 @@ section#section_nine .documentation-left {
 	margin-top: -0.5% !important; 
 }
 
+.section_two {
+
+}
+
+.section_two h2 {    
+	sfont-size: 34px;
+    font-weight: 100;
+    letter-spacing: 0;
+}
+
+.section_two h3 {
+	margin-top: 31vh;
+    margin-bottom: 1vh;
+}
+
+.section_two p {
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 1.5;
+    letter-spacing: .2px;
+    opacity: .95;
+    color: #3d3a44;
+    text-indent: 0px;
+    width: 70%;
+}
+
+.section_two .right {
+	padding-left: 5%; 
+}
