--- a/app/view/index.html
+++ b/app/view/index.html
@@ -61,74 +61,6 @@
 				</div>
 			</section>
 
-			<section class="section_two">
-				<div class="row">
-					<div class="col-xl-6 col-12">
-						<div class="vision"></div>
-					</div>
-					<div class="col-xl-6 col-12">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</div>
-				</div>
-			</section>
-
-			<section class="section_three">
-				<div class="row">
-					<div class="container">
-						<div class="col-xl-6 col-12">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</div>
-						<div class="col-xl-6 col-12">
-							<div class="challenge-img"></div>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<section class="section_fourth">
-				<div class="row">
-					<div class="col-xl-6 col-12">
-						<div class="solution-img"></div>
-					</div>
-					<div class="col-xl-6 col-12">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					</div>
-				</div>
-			</section>
-
-			<section class="section_five">
-				<div class="row">
-					<div class="container">
-						<div class="col-xl-6 col-12">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</div>
-						<div class="col-xl-6 col-12">
-							<div class="protocol-img"></div>
-						</div>
-					</div>
-				</div>
-			</section>
-
 			<section class="pattern">
 				<div class="row">
 					<div class="col-4 col-xl-2">
@@ -152,6 +84,108 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="section_two">
+				<div class="row">
+					<div class="col-xl-6 col-12">
+						<div class="vision"></div>
+					</div>
+					<div class="col-xl-6 col-12 right">
+						<h3 class="txt-highlight">
+							VISION
+						</h3>
+						<h2>
+							Zero-friction commerce,
+							<br>
+							everywhere
+						</h2>
+
+						<p>
+							Commerce is evolving. A few years from now, digital currencies will play a central role in our lives, replacing coins, cash, cards and cheques. They will enable us to transact more easily, more cost-effectively and with greater security than ever before.
+						</p>
+
+						<br>
+
+						<p>
+							COTI aspires to bring about this change by becoming the Currency of the Internet – the first digital currency to achieve widespread adoption in consumer transactions.
+						</p>
+
+					</div>
+				</div>
+			</section>
+
+			<section class="section_three">
+				<div class="row">
+					<div class="container">
+						<div class="col-xl-6 col-12">
+							<h3 class="txt-highlight">CHALLENGE</h3>
+							<h2>
+								Payments are not keeping pace with commerce
+							</h2>
+
+							<p>
+								As the world becomes increasingly interconnected, new forms of commerce – including peer-to-peer transactions, online marketplaces and cross-border eCommerce – are becoming commonplace. Payments networks do not accommodate these forms of commerce effectively, resulting in high fees and low approval rates.
+							</p>
+							<br>
+							<p>
+								Digital currencies, including Bitcoin, lay a strong foundation. But they do not provide a complete payments solution: they face scaling challenges and low rates of adoption, and are unable to offer the protections that consumers and merchants have grown accustomed to.
+							</p>
+						</div>
+						<div class="col-xl-6 col-12">
+							<div class="challenge-img"></div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="section_fourth">
+				<div class="row">
+
+					<div class="center-horizontal">
+						<div class="col-xl-6 col-12">
+							<div class="solution-img"></div>
+						</div>
+						<div class="col-xl-6 col-12">
+
+							<div class="center-vertical">
+								<h3 class="txt-highlight">SOLUTION</h3>
+								<h2>
+									The digital currency that is built for payments
+								</h2>
+
+								<p>
+									COTI is a payments transaction network that was built from the ground-up to solve the payments challenges of today. By introducing a layer of trust to all buyer and seller interactions, COTI gives users greater peace-of-mind and eliminates friction from the payments experience.
+								</p>
+								<br>
+								<p>
+									Powered by a native digital currency, COTI combines the best of traditional payments systems with the best of blockchain technologies to offer the fastest, easiest, most cost-effective and most trusted way to pay.
+								</p>
+							</div>
+						</div>
+						
+					</div>
+				</div>
+			</section>
+
+			<section class="section_five">
+				<div class="row">
+					<div class="container">
+						<div class="col-xl-6 col-12">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						</div>
+						<div class="col-xl-6 col-12">
+							<div class="protocol-img"></div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			
 
 			<section class="section_seven">
 				<div class="documentation-left">
