--- a/app/view/index.html
+++ b/app/view/index.html
@@ -140,7 +140,6 @@
 
 			<section class="section_fourth">
 				<div class="row">
-
 					<div class="center-horizontal">
 						<div class="col-xl-6 col-12">
 							<div class="solution-img"></div>
@@ -162,7 +161,6 @@
 								</p>
 							</div>
 						</div>
-						
 					</div>
 				</div>
 			</section>
@@ -170,16 +168,30 @@
 			<section class="section_five">
 				<div class="row">
 					<div class="container">
-						<div class="col-xl-6 col-12">
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						</div>
-						<div class="col-xl-6 col-12">
-							<div class="protocol-img"></div>
+						<div class="center-horizontal">
+							<div class="col-xl-6 col-12">
+								<div class="center-vertical">
+									<h3 class="txt-highlight">PROTOCOL</h3>
+									<h2>
+										Building trust and incentivizing honest conduct
+									</h2>
+
+									<p>
+										At the core of COTI’s ecosystem lies the Trust Protocol, a new approach for building trust between transacting parties.
+									</p>
+									<br>
+									<p>
+										The protocol algorithmically scores the trustworthiness of buyers and sellers based on their behaviours over time. A seller with an impeccable trust record pays zero processing fees, while a seller with a less-than-ideal record incurs higher fees.
+									</p>
+									<br>
+									<p>
+										The protocol features a decentralized system that reaches consensus on disputes using crowdsourced mediators. Just as Bitcoin miners receive Bitcoin for their efforts, COTI’s mediators are rewarded with COTI’s native currency. Disputes are resolved in a fair, fast and cost-effective manner.
+									</p>
+								</div>
+							</div>
+							<div class="col-xl-6 col-12">
+								<div class="protocol-img"></div>
+							</div>
 						</div>
 					</div>
 				</div>
