--- a/app/view/index.html
+++ b/app/view/index.html
@@ -197,8 +197,6 @@
 				</div>
 			</section>
 
-			
-
 			<section class="section_seven">
 				<div class="documentation-left">
 					<div class="documentation-box-container"></div>
@@ -256,17 +254,52 @@
 			</section>
 
 			<section class="section_eight">
-					<div class="content-img">
-						<div class="roadmap-img-container" style="margin-left: 0%;">
-							<div class="map-img map-img1"></div>
-							<div class="map-img map-img2"></div>
-							<div class="map-img map-img3"></div>
-						</div>						
-					</div>
+				<h3 class="txt-highlight">ROADMAP</h3>
+				<h2>
+					Key milestones on COTI’s journey to improve payments
+				</h2>
+
+				<div class="content-img">
+					<div class="roadmap-img-container" style="margin-left: 0%;">
+						<div class="map-img map-img1"></div>
+						<div class="map-img map-img2"></div>
+						<div class="map-img map-img3"></div>
+					</div>						
+				</div>
+				
+				<div class="align-button">
+					<a class="align" ng-click="">2017</a>
+					<a class="text-center" ng-click="">2018</a>
+					<a class="text-center" ng-click="">Future</a>
+				</div>
 			</section>
 
-			<section>
+			<section class="section_ten">
 				<div class="container">
+
+					<h3 id="title1" class="txt-highlight">PEOPLE</h3>
+					<h2>Behind the Currency of the Internet</h2>
+					<h3 id="title2" class="txt-highlight">Core Team</h3>
+
+
+					<div class="row">
+						<div class="col-md-4 col-xl-4">
+							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/1.jpg" width="140" height="140">
+							<p class="team-people-name">Carlos Aguilera</p>
+							<p class="team-people-title">CEO</p>
+						</div>
+						<div class="col-md-4 col-xl-4">
+							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/2.jpg" width="140" height="140">
+							<p class="team-people-name">Gregory Perez</p>
+							<p class="team-people-title">Product Manager</p>
+						</div>
+						<div class="col-md-4 col-xl-4">
+							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/3.jpg" width="140" height="140">
+							<p class="team-people-name">Cesar Kai</p>
+							<p class="team-people-title">SEO</p>
+						</div>
+					</div>
+
 					<div class="row">
 						<div class="col-md-4 col-xl-4">
 							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/1.jpg" width="140" height="140">
@@ -285,40 +318,10 @@
 						</div>
 					</div>
 				</div>
-
-				<div class="container">
-					<div id="" class="row">
-						<div class="col-md-4 col-xl-4">
-							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/1.jpg" width="140" height="140">
-						</div>
-						<div class="col-md-4 col-xl-4">
-							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/2.jpg" width="140" height="140">
-						</div>
-						<div class="col-md-4 col-xl-4">
-							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/3.jpg" width="140" height="140">
-						</div>
-					</div>
-				</div>
-
-				<div id="" class="container">
-					<div class="row">
-						<div class="col-md-4 col-xl-4">
-							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/1.jpg" width="140" height="140">
-						</div>
-						<div class="col-md-4 col-xl-4">
-							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/2.jpg" width="140" height="140">
-						</div>
-						<div class="col-md-4 col-xl-4">
-							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/3.jpg" width="140" height="140">
-						</div>
-					</div>
-				</div>
 			</section>
 			
-			<section class="pattern">
-						
-				<h3 class="txt-highlight _center">PARTNERS</h3>
-					
+			<section class="pattern">					
+				<h3 class="txt-highlight _center">PARTNERS</h3>	
 				<div class="row align-partners">		
 					<div class="col-12 offset-lg-2 offset-xl-2 col-lg-4 col-xl-4">
 						<div class="transacteu"></div>
