--- a/app/view/index.html
+++ b/app/view/index.html
@@ -281,21 +281,21 @@
 					<h2>Behind the Currency of the Internet</h2>
 					<h3 id="title2" class="txt-highlight">Core Team</h3>
 
-					<div class="row " ng-repeat="team in response.teams">
-						<div class="col-md-4 col-xl-4">
+					<div class="row" ng-repeat="team in response.teams">
+						<div class="col-md-4 col-xl-4" ng-repeat="people in team">
 							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/1.jpg" width="140" height="140">
-							<p class="team-people-name">{{team[0].fullName}}</p>
-							<p class="team-people-title">{{team[0].employment}}</p>
+							<p class="team-people-name">{{people.fullName}}</p>
+							<p class="team-people-title">{{people.employment}}</p>
 						</div>
-						<div class="col-md-4 col-xl-4">
-							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/2.jpg" width="140" height="140">
-							<p class="team-people-name">{{team[1].fullName}}</p>
-							<p class="team-people-title">{{team[1].employment}}</p>
-						</div>
-						<div class="col-md-4 col-xl-4">
-							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/3.jpg" width="140" height="140">
-							<p class="team-people-name">{{team[2].fullName}}</p>
-							<p class="team-people-title">{{team[2].employment}}</p>
+					</div>
+
+					<h3 id="title3" class="txt-highlight">BACKERS AND ADVISORS</h3>
+
+					<div class="row" ng-repeat="team in response.teams">
+						<div class="col-md-4 col-xl-4" ng-repeat="people in team">
+							<img class="mx-auto d-block rounded-circle" src="src/img/prueba/1.jpg" width="140" height="140">
+							<p class="team-people-name">{{people.fullName}}</p>
+							<p class="team-people-title">{{people.employment}}</p>
 						</div>
 					</div>
 				</div>
